examples/src/valid/ackermann.alice

The room ackermann (number x, number y) contained a number
opened
  perhaps (x == 0) so
    Alice found y + 1.
  or maybe (x > 0 && y == 0) so
    Alice found ackermann (x - 1, 1).
  or maybe (x > 0 && y > 0) so
    Alice found ackermann (x - 1, ackermann(x, y - 1)).
  because Alice was unsure which.
closed

The looking-glass hatta ()
opened
   x was a number and y was a number and z was a number too.
   "Enter the first number" spoke,  what was x?.
   "Enter the second number" spoke,  what was y?.
   z became ackermann(x, y).
   "ackermann(" spoke and x spoke and "," spoke and y spoke and ") = " spoke and z said Alice.
closed
