examples/src/invalid/runTest06.alice

The looking-glass hatta ()
opened 
  x was a number of 0.
  y was a number of 10.
  y became y/x.
closed
